# strappy

./: README.md  em_poly_data_sse  strappy.cabal
benchmarks/: sampling.hs
core/: LICENSE  strappy-core.cabal
core/src/Numeric/: ApproxEq.hs  StatsUtils.hs
core/src/Strappy/: .Experiment.hs.swp  .Regression.hs.swp  BeamSearch.hs  Config.hs  Core.hs  Expr.hs  ExprDAG.hs  Grammar.hs  GrammarEM.hs  IterativeDeepening.hs  IterativeDeepening.tex  Library.hs  Logging.hs  Parameters.hs  ProdFeat.hs  Response.hs  Simulation.hs  Task.hs  Type.hs  Utils.hs  routersDef.hs
core/src/Strappy/Experiments/ObjectDetection/: CV.hs
core/src/Strappy/Experiments/Words/: Corpus.hs  Run.prof  Tasks.hs  out_test.txt
core/src/Strappy/Tests/: Expr.hs  TestGrammarOptimization.hs
core/test/: StrappyCoreTest.hs
core/test/StrappyCoreTest/: StatsUtilsSpec.hs
data/: f10000_0  f10000_1  f10000_11  f10000_12  f10000_13  f10000_2  f10000_3  f10000_4  f10000_5  f10000_6  f10000_7  f10000_8  f10000_log  f10000poly_grammar_0  f10000poly_grammar_1  f10000poly_grammar_12  f10000poly_grammar_13  f10000poly_grammar_2  f10000poly_grammar_3  f10000poly_grammar_4  f10000poly_grammar_5  f10000poly_grammar_6  f10000poly_grammar_7  f1000_0  f1000_1  f1000_10  f1000_11  f1000_12  f1000_13  f1000_14  f1000_15  f1000_16  f1000_17  f1000_18  f1000_19  f1000_2  f1000_20  f1000_3  f1000_4  f1000_5  (+72 more)
drafts/: .gitignore  CompressionAndSearch.tex  proposal.tex  writeup.bbl  writeup.bib
drafts/enumeration/: enumeration.tex
drafts/general_writeup/: writeup.bib  writeup.tex
drafts/grammar/: grammar.tex
drafts/ijcai2013/: ijcai13.bib  ijcai13.sty  ijcai13.tex  ijcai13abstract.tex
drafts/ijcai2013/camera_ready/: Dechter.IJCAI13.CameraReady.bib  Dechter.IJCAI13.CameraReady.tex
drafts/ijcai2013/excel/: booleanCircuits1Grammarsheet.csv
drafts/ijcai2013/figures/: NOT.tex  XOR.tex  tablealone.tex
drafts/ijcai2013/ijcai13guidelines/: ijcai13.tex
drafts/inference/: inference.tex
drafts/nips/: eyal_bib.bib  nips2013.tex
drafts/planner/: planner.tex  planner_inference.tex
drafts/tower/: tower.tex
old/: UGM_summary  em_poly_data
old/analyze/: SimplifyPolyGrammar.hs
old/benchmarks/: sampling.html  sampling.tix
old/data/: f10000_10  f10000_14  f10000_9  f10000poly_grammar_10  f10000poly_grammar_11  f10000poly_grammar_14  f10000poly_grammar_3  f10000poly_grammar_6  f10000poly_grammar_8  f10000poly_grammar_9  f1000_14  f1000_15  f1000_18  f1000_19  f1000_4  f1000poly_grammar_1  f1000poly_grammar_11  f1000poly_grammar_13  f1000poly_grammar_15  f1000poly_grammar_16  f1000poly_grammar_18  f1000poly_grammar_19  f1000poly_grammar_3  f1000poly_grammar_7  f100plan_poly_grammar_1  f5000_0  f5000_11  f5000_12  f5000_13  f5000_16  f5000_19  f5000_2  f5000_20  f5000_3  f5000_7  f5000_log  f5000poly_grammar_1  f5000poly_grammar_13  f5000poly_grammar_17  f5000poly_grammar_18  (+7 more)
old/drafts/CommitteeMeetingProposal/: committeeMeetingProposal.bib  committeeMeetingProposal.tex
old/drafts/ECEM/: ECEM.tex
old/drafts/ObjectDetection/: ObjectDetection.fls  ObjectDetection.tex
old/drafts/aistats2013/: DechterEllisAISTATS2013_DRAFT.tex  README.txt  abstracts.tex
old/drafts/general_writeup/: writeup.fls
old/drafts/grammar/: grammar.bib
old/drafts/ijcai2013/: ResponsesToReviewers.txt  ijcai13.tex
old/drafts/mca/: ModularityCompositionalityAbstraction.tex
old/drafts/nips/: clrscode4e.sty  nips2013.tex
old/drafts/nips2014/: Symbolic Dimensionality Reduction Draft  Transfer learning E.C Draft
old/drafts/theory/: theory.tex
old/scratch/: Observer.hs  dep.hs  hlint.hs  hlint.html  scratch.hs
old/src/: Case.hs  ID-bench.html  IterativeDeepening.hp  IterativeDeepening.hs  IterativeDeepening.prof  Makefile  stderr:r
old/src/Strappy/: Config.hs.orig  EnumBF.hs  Experiment.hs  ExprTemplate.hs  Planner.hs  Planner.hs.orig  PostProcess.hs  Run.hs  SymDimRed.hs  TestNumber.hp  TestNumber.hs  TestNumber.prof  Tower.hs  Visualize.hs  curve.gp  curve0.csv  gitdiff.txt  log.txt
old/tests/: TestBestFirst.hs  TestDriver.hs
src/: Makefile  physics_cache
src/PI/: BooleanCircuits.hs  CL.hs  CL2.hs  CLError.hs  CombMap.hs  CombTrie.hs  Compress.hs  CompressionSearch.hs  Data.hs  DigArith.hs  EnumBF.hs  Enumerate.hs  Evaluator.hs  Experiment.hs  Expr.hs  Grammar.hs  GraphSearch.hs  GraphSearch2.hs  ICL.hs  Lines.hs  ListExperiment.hs  MemoType.hs  NumberGame.hs  PCFG.hs  ParseCL.hs  PostProcess.hs  Routers.hs  Run.hs  Search.hs  Similarity.hs  StdLib.hs  Task.hs  Test  Test.hs  Type.hs
src/PI/Experiments/: CircuitsExperiment.hs  DigitalArithmetic.hs  EX1.hs  EX2.hs  EX5.hs  ListExperiment.hs  SymbolicRegression.hs
src/PI/Tests/: ListState.hs  TestComb.hs  TestCompress.hs  TestCompressionSearch.hs  TestDriver.hs  TestGrammar.hs  TestTrans.hs  TestTrans2.hs  TestType.hs
src/PI/Timing/: EnumWMemo
src/PI/matlab/: plotNumHits.m~
src/PI/python/: symreg.py  symregmany.py
src/Physics/: BlockClient.hs  PhysicsCache.hs
src/STLC/: Expr.hs  Type.hs
src/Strappy/: AnAlternativeApproach.hs  BeamSearch.hs  BooleanCircuits.hs  BottomUp.hs  BuilderClient.hs  CL.hs  CLError.hs  Case.hs  CombMap.hs  CombSequitur.hs  Compress.hs  CompressionSearch.hs  Config.hs  Core.hs  Data.hs  DigArith.hs  DigIncr.hs  EM.hs  EnumBF.hs  EnumBits.hs  Enumerate.hs  Experiment.hs  Expr.hs  ExprTemplate.hs  Grammar.hs  GraphSearch.hs  IterativeDeepening.hs  LPCompress.hs  Library.hs  Number.hs  ParseCL.hs  ParseExpr.hs  PlanTest.hs  Planner.hs  Poly.hs  PostProcess.hs  ProdFeat.hs  Routers.hs  Run.hs  Sample.hs  (+12 more)
src/Strappy/Experiments/: CSG.hs
src/Strappy/Tests/: TestCompress.hs  TestEnum.hs
src/core/: CL.hs  CombMap.hs  CombSequitur.hs  EnumWoMemo.hs  Experiment.hs  Expr.hs  Task.hs
src/core/Experiments/: CircuitsExperiment.hs  ListExperiment.hs
src/core/Tests/: TestHashMap.hs
src/core/Timing/: EnumWMemo.hs
src/core/data/: EX1_15000_cDepths.txt
src/simulator/: builder_common.py  console.py  render.py
tests/: AmbTI.hs  TestBranching.hs  TestComb.hs  TestListTI.hs  TestStateT.hs  TestUtils.hs  TestingLogict.hs  hunit.hs  properties.hs
(+3496 files in other folders)
