-- The name of the package.
name:                strappy-core

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            An software suite for program induction based on the E.C. algorithm. 

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/edechter/strappy/

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Eyal Dechter, Kevin Ellis, Josh Rule

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          edechter@mit.edu

-- A copyright notice.
-- copyright:           

category:            Language

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  LICENSE, README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules: Strappy.Type, 
                   Strappy.Expr,
                   Numeric.StatsUtils,
                   Numeric.ApproxEq

                   
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  default-extensions:   TupleSections, 
                        FlexibleInstances, 
                        TypeSynonymInstances, 
                        FlexibleContexts, 
                        BangPatterns, 
                        TemplateHaskell, 
                        ExtendedDefaultRules, 
                        OverloadedStrings, 
                        NoMonomorphismRestriction,
                        ExistentialQuantification,
                        ScopedTypeVariables      
  
  -- Other library packages from which modules are imported.
  build-depends:  base,
                  containers,
                  deepseq          >= 1.3.0.1,
                  mtl              >= 2.1.2, 
                  transformers     >= 0.3.0.0, 
                  hashable         >= 1.1.2.5,
                  parsec           >= 3.1.5,
                  ghc-prim         >= 0.3.0.0,
                  directory        >= 1.2.0.1,
                  MonadRandom      >= 0.1.12,
                  random           >= 1.0.1.1,
                  criterion        >= 0.6.0.0,
                  data-timeout     >= 0.3,
                  HUnit            >= 1.2.5.2
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010



test-suite hspec
    build-depends:    base, strappy-core, hspec == 1.8.*, HUnit >= 1.2.5.2
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          StrappyCoreTest.hs
    type:             exitcode-stdio-1.0